syntax = "proto3";

package meta.v1.suite;
option go_package = "github.com/zj-sh/meta/v1/suite";

import "v1/base/meta.proto";
import "v1/base/meta_log.proto";
import "v1/suite/meta_running.proto";

message CustomParam{
    meta.v1.base.JsonString params = 1;
}

message CustomResponse {
    meta.v1.base.RunStatus status = 1;
    meta.v1.base.Log log = 2;
    meta.v1.suite.OutResponse outs = 3;
}