syntax = "proto3";

package meta.v1.suite;
option go_package = "github.com/zj-sh/meta/v1/suite";

import "v1/base/meta.proto";
import "v1/suite/meta_running.proto";
import "v1/base/meta_org.proto";

message OrgItem {
    string corp_name = 1;
    string sync_corp_code = 2;   // 三方的机构唯一键
    string sync_parent_code = 3; // 三方的父级机构唯一键
    string sync_1 = 4;           // 备用字段一
    string sync_2 = 5;           // 备用字段二
    string sync_3 = 6;           // 备用字段三
    string sync_4 = 7;           // 备用字段四
    string sync_5 = 8;           // 备用字段五
}
message OrgUserItem {
    string user_name = 1;
    string email = 2;
    string phone = 3;
    string sync_corp_code = 4;  // 三方的机构唯一键
    string sync_user_code = 5;  // 三方的用户唯一键
    string sync_1 = 6;  // 备用字段一
    string sync_2 = 7;  // 备用字段二
    string sync_3 = 8; // 备用字段三
    string sync_4 = 9; // 备用字段四
    string sync_5 = 10; // 备用字段五
}
message OrgParam {
    meta.v1.base.JsonString params = 1;
    meta.v1.base.Pages pages = 2;
    meta.v1.base.OrgSyncItem parent = 3;
}
message OrgResponse {
    repeated OrgItem items = 1;
    meta.v1.base.Pages pages = 2;
    meta.v1.suite.OutResponse outs = 3;
}
message OrgUserParam {
    meta.v1.base.JsonString params = 1;
    meta.v1.base.Pages pages = 2;
    meta.v1.base.OrgSyncItem corp = 3;
}
message OrgUserResponse {
    repeated OrgUserItem items = 1;
    meta.v1.base.Pages pages = 2;
    meta.v1.suite.OutResponse outs = 3;
}
