syntax = "proto3";

package meta.v1.suite;
option go_package = "github.com/zj-sh/meta/v1/suite";

import "v1/base/meta.proto";
import "v1/base/meta_log.proto";
import "v1/suite/meta_running.proto";

message SourcePullCloneParam {
    meta.v1.base.JsonString params = 1;
    string dir = 2;
    string url = 3;
    string key = 4;
    string branch = 5;
    string tag = 6;
    string commit = 7;
}
message SourcePullCreateParam {
    meta.v1.base.JsonString params = 1;
    string dir = 2;
    string url = 3;
    string key = 4;
    string branch = 5;
    string tag = 6;
    string commit = 7;
}
message SourcePullMergeParam {
    meta.v1.base.JsonString params = 1;
    string dir = 2;
    string url = 3;
    string key = 4;
    string from = 5;
    string to = 6;
}
message SourcePullResponse {
    meta.v1.base.RunStatus status = 1;
    meta.v1.base.Log log = 2;
    string message = 3;
    meta.v1.suite.OutResponse outs = 4;
}